[tool.poetry]
name = "multiroom-chat-server"
version = "0.1.0"
description = "Second project of the Computers Network course"
authors = ["vpoltron <victoriapoltronieri@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"